# learnscrapy

./: README.md  main.py  pyproject.toml  register.py  requirements.txt  scrapy.cfg  test.sql  ua.json
Android/: package-lock.json  package.json
Android/APP4/: code.js
Android/APP5/: main.py
Android/APP8/: main.py
Android/APP9/: main.py  main_rpc.py
js/: package-lock.json  package.json  pnpm-lock.yaml  spa7.py  spa9.py
js/antispider9/: ast.js  decode.js  encode.js
js/spa10/: main.py  main_decode.js
js/spa11/: main.js  main.py
js/spa12/: main.js  main.py
js/spa13/: ast.js  main.js  main_decode.js
js/spa14/: main.py
js/spa15/: Wasm.wasm  main.py
js/spa15/c99/: main.c  wasm.c  wasm.h
js/spa16/: main.py
learnscrapy/: items.py  middlewares.py  pipelines.py  settings.py
learnscrapy/spiders/: antispider1.py  antispider2.py  antispider4.py  antispider5.py  antispider6.py  antispider7.py  login2.py  login3.py  spa1.py  spa16.py  spa2.py  spa3.py  spa4.py  spa5.py  ssr1.py  ssr2.py  ssr3.py  ssr4.py
