[project]
name = "learnscrapy"
version = "0.1.0"
description = ""
authors = [
    { name = "libra146", email = "1462326016@qq.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scrapy (>=2.12.0,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "pymongo (>=4.10.1,<5.0.0)",
    "pywasm (>=2.0.1,<3.0.0)"

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
